# Modularized-Neural-Network-Incorporating-Physical-Priors-for-Future-Building-Energy-Modeling

./: LICENSE  README.md
Checkpoint/: selected.pt  simrange.pickle
Dynamic/: DataPrepare.py  OnlySingel.py  Prediction.py  Temp_Main.py  Temp_RMSE.csv  Temp_mae.csv
Load/: DataPrepare.py  Load_Run.py  Net.py  (+2 more)
update/: LICENSE  README  README.md  Update_Log.md  pyproject.toml  setup.py
update/B2G/: Configuration.py  README.md
update/B2G/Module/: Battery.py  EV.py  PV.py
update/Checkpoint/: best.pt
update/Examples/: Example.py
update/ModNN/: Config.py  Dataset.py  Play.py  run.py  utils.py
update/ModNN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
update/Result/Mid/PI-modnn/Enco48_Deco96/: (mae)Train_with_180days\nTest_on07-30.pkl  (mape)Train_with_180days\nTest_on07-30.pkl  (mse)Train_with_180days\nTest_on07-30.pkl  (pred)Train_with_180days\nTest_on07-30.pkl  (raw)Train_with_180days\nTest_on07-30.csv  (summary)Train_with_180days\nTest_on07-30.pkl
update/Saved/LossEnco48_Deco96/: PI-ModNNLoss90days_Test_on05-31.pickle
update/Saved/Mid/LossEnco48_Deco96/: PI-modnnLoss180days_Test_on07-30.pickle
update/Saved/Mid/Trained_mdlEnco48_Deco96/: PI-modnn_180daysTest_on07-30.pth
update/Saved/Trained_mdlEnco48_Deco96/: PI-ModNN_90daysTest_on05-31.pth
update/Scaler/Mid/: ModNN_scaler.pkl
update/modnn/: Config.py  Dataset.py  ModNN_scaler.pkl  Play.py  __init__.py  hyper_tune.py  run.py  utils.py
update/modnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
update/modnn/Models/: BaseNN.py  ModNN.py  ModNN_data.py  ModNN_phy.py  PolicyNN.py
(+64 files in other folders)
